--- a/src/Metronome.css
+++ b/src/Metronome.css
@@ -1,21 +1,20 @@
 .metronome {
-    text-align: center;
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 30px; 
+  text-align: center;
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 30px;
+}
+
+.bpm-header {
+  font-size: 32px;
 }
 
 .bpm-slider input {
-    width: 100%;
-    margin: 10px;
+  width: 100%;
+  margin: 10px;
 }
 
-.metronome button {
-    background: white;
-    padding: 10px;
-    border: 1px solid;
-    border-radius: 2px;
-    width: 100px;
-    color: red;
-    font-size: 18px; 
+.metronome-container {
+  margin-left: auto;
+  margin-right: auto;
 }
